# nddb

./: CMakeLists.txt  README.md  vcpkg.json
include/libnddb/: libnddb.hpp  process.hpp
src/: CMakeLists.txt  libnddb.cpp  process.cpp
test/: CMakeLists.txt  tests.cpp
tools/: CMakeLists.txt  nddb.cpp
